testing adding story

--- a/index.html
+++ b/index.html
@@ -100,8 +100,7 @@
   <form
     action="#"
     id="newStory-form"
-    class="account-form hidden"
-    method="post">
+    class="account-form hidden">
     <h4>Submit Story</h4>
     <div class="login-input">
       <label for="story-title">title</label>
